src/index.css
@import 'tailwindcss';

:root {
  --font-english: 'Roboto', system-ui, sans-serif;
  --font-bengali: 'Noto Sans Bengali', 'SolaimanLipi', sans-serif;

  --background: #f3f3f3;
  --foreground: #282628;
  --surface: #ffffff;

  color-scheme: light dark;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@theme inline {
  --font-english: var(--font-english);
  --font-bengali: var(--font-bengali);

  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-surface: var(--surface);

  --color-primary-50: #e9eff6;
  --color-primary-500: #1f5da0;
  --color-primary-600: #1c5592;

  --color-neutral-300: #ababab;

  --color-white-700: #ebebeb;

  --height-17: 68px;

  --shadow-custom-1: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #282628;
    --foreground: #ffffff;
    --surface: #383838;
  }
}

body {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-english);
}

input:-webkit-autofill {
  -webkit-text-fill-color: #000 !important;
  transition: background-color 9999s ease-in-out 0s;
}

@utility input-class {
  @apply w-full border border-neutral-300 text-sm rounded-lg p-2 outline-none focus-within:border-primary-500;
}

@utility input-error {
  @apply text-red-500 text-sm;
}

